--- a/src/app/movies/movie-single/movie-single.component.html
+++ b/src/app/movies/movie-single/movie-single.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="movie-container">
+    <div class="single-container">
         <div class="row">
 
             <div class="col-md-4 col-sm-12 col-xs-12">
@@ -9,9 +9,7 @@
                 </div>
                 <div class="poster-buttons" *ngIf="movie?.videos['results'].length != 0">
                     <div class="btn-transform transform-vertical red">
-                        <div (click)="openVerticallyCentered(content)" class="youtube item item-1 redbtn"> Watch
-                            Trailer
-                        </div>
+                        <div (click)="openVerticallyCentered(content)" class="youtube item item-1 redbtn">Watch Trailer</div>
                     </div>
                 </div>
             </div>
@@ -52,10 +50,10 @@
                                                     <img src="{{cast['profile_path']? 'https://image.tmdb.org/t/p/w45' + cast['profile_path'] : 'http://via.placeholder.com/45x45?text=No%20Profile%20Image'}}"
                                                          alt="Actor picture">
                                                     <p class="actor" data-toggle="tooltip" data-placement="top"
-                                                       title="{{cast['name']}}">&nbsp;{{cast['name'] | slice:0:20}}</p>
+                                                       title="{{cast['name']}}">&nbsp;{{cast['name'].length > 20 ? (cast['name'] | slice:0:20) + '...' : cast['name']}}</p>
                                                 </div>
                                                 <p class="character" data-toggle="tooltip" data-placement="top"
-                                                   title="{{cast['character']}}">as {{cast['character']}}</p>
+                                                   title="{{cast['character']}}"> ... {{cast['character'].substring(0, cast['character'].indexOf('/'))}}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -83,7 +81,6 @@
                                             <p>{{movie?.release_date}}</p>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
