--- a/src/app/series/serie-single/serie-single.component.html
+++ b/src/app/series/serie-single/serie-single.component.html
@@ -50,7 +50,7 @@
                                                     <img src="{{cast['profile_path']? 'https://image.tmdb.org/t/p/w45' + cast['profile_path'] : 'http://via.placeholder.com/45x45?text=No%20Profile%20Image'}}" alt="Actor picture">
                                                     <p class="actor" data-toggle="tooltip" data-placement="top" title="{{cast['name']}}">&nbsp;{{cast['name'].length > 20 ? (cast['name'] | slice:0:20) + '...' : cast['name']}}</p>
                                                 </div>
-                                                <p class="character" data-toggle="tooltip" data-placement="top" title="{{cast['character']}}"> ... {{cast['character'].substring(0, cast['character'].indexOf('/'))}}</p>
+                                                <p class="character" data-toggle="tooltip" data-placement="top" title="{{cast['character']}}"> as {{cast['character'].length > 20 ? (cast['character'].indexOf('/') > 0 ? cast['character'].substring(0, cast['character'].indexOf('/')) : (cast['character'] | slice:0:20) + '...') : cast['character']}}</p>
                                             </div>
                                         </div>
                                     </div>
