--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,15 @@ nav {
     background-image: url("../../../public/images/black_pattern.jpg");
     border-bottom: 1px solid chartreuse;
 }
+
+#moviesDropdown {
+    color: white;
+}
+
+#seriesDropdown {
+    color: white;
+}
+
+#userDropdown {
+    color: white;
+}
