--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<ng-progress [thick]="true" [color]="'chartreuse'" [speed]="300"></ng-progress>
 <app-header></app-header>
 <router-outlet></router-outlet>
