--- a/src/app/series/series-list-layout.html
+++ b/src/app/series/series-list-layout.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="row">
+    <div class="row list">
         <div class="col-lg-3 col-md-6" *ngFor="let serie of series">
             <a [routerLink]="['/series', 'serie', serie.id]" class="card" style="width: 18rem;">
                 <img class="card-img-top poster"
