--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,19 +4,52 @@
             <form class="sign col-md-7" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" placeholder="Username" formControlName="username">
+                    <input type="text" class="form-control" id="username" placeholder="Username"
+                           formControlName="username">
+                    <div class="errors text-danger font-weight-bold" *ngIf="usernameExists">Username already exists</div>
+                    <div *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched"
+                         class="errors text-danger font-weight-bold">
+                        <div *ngIf="signupForm.get('username').errors['required']">This field is required</div>
+                        <div *ngIf="signupForm.get('username').errors['minlength'] ||
+                        signupForm.get('username').errors['maxlength']">Username length must be between 4 and 10
+                        </div>
+                        <div *ngIf="signupForm.get('username').errors['pattern']">White spaces or special characters not
+                            allowed
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email">
+                    <input type="email" class="form-control" id="email" placeholder="Enter email"
+                           formControlName="email">
+                    <div class="errors text-danger font-weight-bold" *ngIf="emailExists">Email already exists</div>
+                    <div *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
+                         class="errors text-danger font-weight-bold">
+                        <div *ngIf="signupForm.get('email').errors['required']">This field is required</div>
+                        <div *ngIf="signupForm.get('email').errors['pattern']">Email is not valid</div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password">
+                    <input type="password" class="form-control" id="password" placeholder="Password"
+                           formControlName="password">
+                    <div *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched"
+                         class="errors text-danger font-weight-bold">
+                        <div *ngIf="signupForm.get('password').errors['required']">This field is required</div>
+                        <div *ngIf="signupForm.get('password').errors['minlength'] ||
+                            signupForm.get('password').errors['minlength']">Password length must be between 8 and 16
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Confirm Password</label>
-                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password" formControlName="confirmPassword">
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password"
+                           formControlName="confirmPassword">
+                    <div *ngIf="!signupForm.get('confirmPassword').valid && signupForm.get('confirmPassword').touched"
+                         class="errors text-danger font-weight-bold">
+                        <div *ngIf="signupForm.get('confirmPassword').errors['required']">This field is required</div>
+                        <div *ngIf="signupForm.errors && signupForm.errors['mismatch']">Passwords don't match</div>
+                    </div>
                 </div>
                 <button [disabled]="!signupForm.valid" type="submit" class="btn btn-primary">Submit</button>
             </form>
