--- a/src/app/auth/account/account.component.html
+++ b/src/app/auth/account/account.component.html
@@ -11,15 +11,16 @@
                     <div class="col-lg-1">
                         <i style="color: white;" class="fa fa-pencil fa-2x"></i>
                     </div>
+                    <div class="errors col-lg-12 text-danger font-weight-bold" *ngIf="usernameExists">Username already exists</div>
                     <div *ngIf="!accountSettingsForm.get('username').valid &&
                      accountSettingsForm.get('username').touched" class="errors col-lg-12 text-danger font-weight-bold">
-                        <div *ngIf="accountSettingsForm.get('username').errors['required']"
-                        >This field is required
-                        </div>
+                        <div *ngIf="accountSettingsForm.get('username').errors['required']">This field is required</div>
                         <div *ngIf="accountSettingsForm.get('username').errors['minlength'] ||
                          accountSettingsForm.get('username').errors['maxlength']"
                         >Username length must be between 4 and 10
                         </div>
+                        <div *ngIf="accountSettingsForm.get('username').errors['pattern']">White spaces or special characters not
+                            allowed</div>
                     </div>
                 </div>
                 <div class="form-group row justify-content-center">
@@ -30,6 +31,7 @@
                     <div class="col-lg-1">
                         <i style="color: white;" class="fa fa-pencil fa-2x"></i>
                     </div>
+                    <div class="errors col-lg-12 text-danger font-weight-bold" *ngIf="emailExists">Email already exists</div>
                     <div *ngIf="!accountSettingsForm.get('email').valid &&
                      accountSettingsForm.get('email').touched" class="errors col-lg-12 text-danger font-weight-bold">
                         <div *ngIf="accountSettingsForm.get('email').errors['required']"
