--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="wrapper col-md-12">
             <form class="sign col-md-7" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+                <ngb-alert *ngIf="newUserRegistered" class="text-center" type="success" [dismissible]="false">
+                    You've been registered! An activation link has been sent to your email address.
+                </ngb-alert>
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Username"
