--- a/src/app/movies/movie-single/movie-single.component.html
+++ b/src/app/movies/movie-single/movie-single.component.html
@@ -20,9 +20,9 @@
 
                     <div class="social-btn">
                         <a *ngIf="!inFavourites" href="javascript:void(0);" (click)="onFavourite()" class="parent-btn"><i class="fa fa-heart"></i>&nbsp;Add to Favourites</a>
-                        <a *ngIf="inFavourites" href="javascript:void(0);" (click)="onFavourite()" class="parent-btn"><i class="fa fa-heart"></i>&nbsp;Remove</a>
+                        <a *ngIf="inFavourites" href="javascript:void(0);" (click)="onRemoveFavourite()" class="parent-btn"><i class="fa fa-heart"></i>&nbsp;Remove</a>
                         <a *ngIf="!inLikes" href="javascript:void(0);" (click)="onLike()" class="parent-btn"><i class="fa fa-thumbs-up"></i>&nbsp;Like</a>
-                        <a *ngIf="inLikes" href="javascript:void(0);" (click)="onLike()" class="parent-btn"><i class="fa fa-thumbs-up"></i>&nbsp;Dislike</a>
+                        <a *ngIf="inLikes" href="javascript:void(0);" (click)="onRemoveLike()" class="parent-btn"><i class="fa fa-thumbs-up"></i>&nbsp;Remove</a>
                     </div>
                     <div *ngIf="message" ngClass="{{error? 'alert alert-danger' : 'alert alert-success'}}">{{message}}</div>
 
