--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 nav {
-    background-image: url("../../../public/images/black_pattern.jpg");
+    background-image: url("/images/black_pattern.jpg");
     border-bottom: 1px solid chartreuse;
 }
 
