--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,6 @@
 </head>
 <body>
 <app-root>Loading...</app-root>
-<script src="javascripts/bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
