--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -17,7 +17,7 @@
 }
 
 .card {
-    background-image: url("../../public/images/black_pattern.jpg");
+    background-image: url("../images/black_pattern.jpg");
     position: relative;
     overflow: hidden;
     margin-top: 10px;
