--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" [routerLink]="['movies']"><img src="/images/navbar_brand.png" alt=""></a>
+        <a class="navbar-brand" [routerLink]="['movies']"><img src="../../../assets/images/navbar_brand.png" alt=""></a>
         <button (click)="isCollapsed = !isCollapsed"
                 [attr.aria-expanded]="!isCollapsed" class="navbar-toggler" type="button" data-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
