Replace localhost and set entry point for webpack configs

--- a/src/app/auth/account/account-activation/account-activation.component.html
+++ b/src/app/auth/account/account-activation/account-activation.component.html
@@ -10,7 +10,7 @@
                 {{message? message : null}}
             </ngb-alert>
             <ngb-alert class="text-center" type="info" [dismissible]="false">
-                If your activation link has expired, you can re-send a new one clicking <a href="http://localhost:3000/user/resend">here</a>
+                If your activation link has expired, you can re-send a new one clicking <a href="https://angular-theater.herokuapp.com/user/resend">here</a>
             </ngb-alert>
         </div>
     </div>
