--- a/src/app/movies/movie-single/movie-single.component.html
+++ b/src/app/movies/movie-single/movie-single.component.html
@@ -4,7 +4,7 @@
 
             <div class="col-md-4 col-sm-12 col-xs-12">
                 <div class="poster-image sticky">
-                    <img src="{{movie?.poster_path? 'https://image.tmdb.org/t/p/w342/' + movie.poster_path : 'http://via.placeholder.com/342x513?text=No%20Poster%20Image'}}"
+                    <img src="{{movie?.poster_path? 'https://image.tmdb.org/t/p/w342/' + movie.poster_path : 'https://via.placeholder.com/342x513?text=No%20Poster%20Image'}}"
                          alt="Poster">
                 </div>
                 <div class="poster-buttons" *ngIf="movie?.videos['results'].length != 0">
@@ -50,7 +50,7 @@
                                         <div class="cast-item" *ngFor="let cast of movie?.credits['cast'] | slice:0:7">
                                             <div class="cast-it">
                                                 <div class="cast-left">
-                                                    <img src="{{cast['profile_path']? 'https://image.tmdb.org/t/p/w45' + cast['profile_path'] : 'http://via.placeholder.com/45x45?text=No%20Profile%20Image'}}"
+                                                    <img src="{{cast['profile_path']? 'https://image.tmdb.org/t/p/w45' + cast['profile_path'] : 'https://via.placeholder.com/45x45?text=No%20Profile%20Image'}}"
                                                          alt="Actor picture">
                                                     <p class="actor" data-toggle="tooltip" data-placement="top"
                                                        title="{{cast['name']}}">&nbsp;{{cast['name'].length > 20 ? (cast['name'] | slice:0:20) + '...' : cast['name']}}</p>
