--- a/src/app/movies/movies-list-layout.html
+++ b/src/app/movies/movies-list-layout.html
@@ -3,7 +3,7 @@
         <div class="col-lg-3 col-md-6" *ngFor="let movie of movies">
             <a [routerLink]="['/movies', 'movie', movie.id]" class="card" style="width: 18rem;">
                 <img class="card-img-top poster"
-                     src="{{movie.poster_path? 'https://image.tmdb.org/t/p/w300' + movie.poster_path: 'http://via.placeholder.com/300x450/ffffff/00000?text=No+Poster'}}"
+                     src="{{movie.poster_path? 'https://image.tmdb.org/t/p/w300' + movie.poster_path: 'https://via.placeholder.com/300x450/ffffff/00000?text=No+Poster'}}"
                      alt="Card image cap">
                 <div class="card-body">
                     <div class="card-text">
