--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -40,7 +40,7 @@
                          class="errors text-danger font-weight-bold">
                         <div *ngIf="signupForm.get('password').errors['required']">This field is required</div>
                         <div *ngIf="signupForm.get('password').errors['minlength'] ||
-                            signupForm.get('password').errors['minlength']">Password length must be between 8 and 16
+                            signupForm.get('password').errors['maxlength']">Password length must be between 8 and 16
                         </div>
                     </div>
                 </div>
